# yolov9

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
yolov9/: __init__.py  benchmarks.py  detect.py  detect_dual.py  export.py  hubconf.py  train.py  train_dual.py  train_triple.py  val.py  val_dual.py  val_triple.py
yolov9/classify/: predict.py  train.py  val.py
yolov9/models/: common.py  experimental.py  tf.py  yolo.py
yolov9/panoptic/: predict.py  train.py  val.py
yolov9/segment/: predict.py  train.py  train_dual.py  val.py  val_dual.py
yolov9/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  coco_utils.py  dataloaders.py  downloads.py  general.py  loss.py  loss_tal.py  loss_tal_dual.py  loss_tal_triple.py  plots.py  torch_utils.py
yolov9/utils/loggers/: __init__.py
yolov9/utils/loggers/clearml/: clearml_utils.py
yolov9/utils/loggers/comet/: __init__.py  hpo.py
yolov9/utils/loggers/wandb/: log_dataset.py  sweep.py  wandb_utils.py
yolov9/utils/panoptic/: loss_tal.py
yolov9/utils/panoptic/tal/: anchor_generator.py  assigner.py
yolov9/utils/segment/: loss_tal.py  loss_tal_dual.py
yolov9/utils/segment/tal/: assigner.py
yolov9/utils/tal/: assigner.py
